# boetchen_bot

./: pyproject.toml  requirements.in  requirements.txt
boetchen/: __init__.py  __main__.py  bot_manager.py  date_poller.py
boetchen/logging/: __init__.py  config.json
