
[build-system]
requires=["setuptools", "setuptools-scm"]

[project]
name="boetchen"
authors=[
    {name="daniel St.", email="dan.stonewall@gmail.com"}
]
dynamic=["dependencies", "version", "description"]

[project.scripts]
highroller_bot="boetchen.__main__:main"


[tool.setuptools.packages.find]
where=["boetchen", "logging"]

[tool.setuptools.dynamic]
version={attr ="boetchen.__version__"}
description={file=["README.md"]}
dependencies={file=["requirements.txt"]}



